# pdf-up

./: CLAUDE.md  ECHO_CHECKLIST.md  GEO_PLAN.md  GEO_ZOTERO_API.md  README.md  pyproject.toml
src/pdf_up/: cli.py  config.py  notebooks.py  prompts.py  services.py  zotero_api.py
src/pdf_up.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
