[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-up"
version = "0.1.0"
description = "Upload a local PDF to Reader, NotebookLM, Zotero, and Obsidian summary in one command."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Amorn Jongsathapongpan" }
]
dependencies = [
  "requests>=2.31.0",
  "PyMuPDF>=1.24.0",
]

[project.scripts]
pdf-up = "pdf_up.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
